Updated method visibility, added new methods, and fixed CSS syntax
In this commit:
- The visibility of `GetVisibleDates()` method in `ScheduleViewBase.cs` and `TnTWeekView.razor.cs` has been changed from `protected` to `public`.
- Two new methods, `GetFirstVisibleDate()` and `GetLastVisibleDate()`, have been added to `TnTScheduler.razor.cs` to return the first and last visible dates respectively.
- A comment has been added to the `CountOverlaps()` method in `TnTWeekView.razor.cs` indicating a need to fix the overlap count logic.
- In `_dialog.scss`, the `overflow-x` property has been added to the dialog style with a value of `clip` and a closing brace has been added to correct the syntax.

--- a/TnTComponents/Styles/TnTComponents/_dialog.scss
+++ b/TnTComponents/Styles/TnTComponents/_dialog.scss
@@ -15,6 +15,7 @@
         max-height: 75%;
         min-width: 25%;
         overflow-y: auto;
+        overflow-x: clip;
         z-index: 2001;
         transition: 200ms ease-in-out;
         animation: dialogGrow 100ms ease-in-out forwards;
